<resources>
    <string name="app_name">Gestor de Gastos</string>
    <string name="add_expense">Añadir Gasto</string>
    <string name="amount">Cantidad</string>
    <string name="description">Descripción</string>
    <string name="save">Guardar</string>
    <string name="expense_saved">Gasto guardado correctamente</string>
    <string name="app_title">Lista de gastos personales</string>
    <string name="title">Titulo</string>
    <string name="date">Fecha</string>
    <string name="category">Categoria</string>
    <string name="search">Buscar por título</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="select_date">Selecciona una fecha</string>
    <string name="place">Lugar</string>
    <string name="cuantity">Cantidad</string>
    <string name="all_categories">Todas</string>
    <!-- Categorías -->
    <string name="category_all">Todas</string>
    <string name="category_food">Comida</string>
    <string name="category_transport">Transporte</string>
    <string name="category_fun">Ocio</string>
    <string name="category_home">Vivienda</string>
    <string name="category_others">Otros</string>

    <!-- Opciones de orden -->
    <string name="sort_recent">Más recientes</string>
    <string name="sort_oldest">Más antiguos</string>
    <string name="sort_expensive">Más caros</string>
    <string name="sort_cheap">Más baratos</string>

    <!-- Opciones de tiempo -->
    <string name="time_all">Todos</string>
    <string name="time_today">Hoy</string>
    <string name="time_yesterday">Ayer</string>
    <string name="time_last_week">Última Semana</string>
    <string name="time_last_month">Último Mes</string>

    <string-array name="categories">
        <item>Todas</item>
        <item>Comida</item>
        <item>Transporte</item>
        <item>Ocio</item>
        <item>Vivienda</item>
        <item>Otros</item>
    </string-array>

    <string-array name="sort_options">
        <item>Más recientes</item>
        <item>Más antiguos</item>
        <item>Más caros</item>
        <item>Más baratos</item>
    </string-array>

    <string-array name="time_options">
        <item>Todos</item>
        <item>Hoy</item>
        <item>Ayer</item>
        <item>Última Semana</item>
        <item>Último Mes</item>
    </string-array>
</resources>
