<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Editar Gasto"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Selector de Fecha -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <TextView
            android:id="@+id/fechaSeleccionadaTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_date"
            android:textSize="16sp"
            android:padding="8dp"
            android:gravity="center" />

        <Button
            android:id="@+id/abrirCalendarioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calendario" />
    </LinearLayout>

    <EditText
        android:id="@+id/lugarEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place" />

    <EditText
        android:id="@+id/descripcionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description" />

    <Spinner
        android:id="@+id/categoriaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/cantidadEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cuantity"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/guardarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:text="@string/save" />

    <Button
        android:id="@+id/cancelarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF4081"
        android:text="@string/cancel"
        android:layout_marginTop="8dp" />
</LinearLayout>